compiler/fir/analysis-tests/testData/resolveWithStdlib/j+k/importJavaMapped.kt
// RUN_PIPELINE_TILL: BACKEND
// ISSUE: KT-82506

import <!PLATFORM_CLASS_MAPPED_TO_KOTLIN("java.util.Map")!>java.util.Map<!>

fun main() {}

/* GENERATED_FIR_TAGS: functionDeclaration */
